# NullForge

./: .gitignore  NULLFORGE_WHITEPAPER.md  README.md  main.py  nullforge.py  pyproject.toml  requirements.txt
aol_fire/: __init__.py  core.py  llm.py  models.py  workflow.py
aol_fire/agents/: __init__.py  coder.py  orchestrator.py  planner.py  prompts.py
aol_fire/tools/: __init__.py  code_tools.py  file_tools.py  git_tools.py  project_tools.py  shell_tools.py  web_tools.py
aol_fire/tui/: __init__.py  display.py
docs-site/: index.html
security_auditor/: .env  .gitignore  README.md  nullforge.yaml
security_auditor/src/: auditor.py
tests/: __init__.py  test_fire.py
